--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,14 @@
             android:text="独立页面外调用接口"
             android:layout_height="wrap_content">
         </Button>
+
+        <Button
+            android:id="@+id/bt5"
+            android:layout_width="match_parent"
+            android:textAllCaps="false"
+            android:text="test"
+            android:layout_height="wrap_content">
+        </Button>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
