--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
             android:id="@+id/bt3"
             android:layout_width="match_parent"
             android:textAllCaps="false"
-            android:text="列表"
+            android:text="列表(带缓存)"
             android:layout_height="wrap_content">
         </Button>
         <Button
