--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,14 @@
             android:layout_height="wrap_content">
         </Button>
 
+        <Button
+            android:id="@+id/bt6"
+            android:layout_width="match_parent"
+            android:textAllCaps="false"
+            android:text="接口缓存"
+            android:layout_height="wrap_content">
+        </Button>
+
 
         <Button
             android:id="@+id/btTest"
