--- a/app/src/main/res/layout/activity_cocurrent_api.xml
+++ b/app/src/main/res/layout/activity_cocurrent_api.xml
@@ -1,25 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.MultiApiAct">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <Button
-        android:id="@+id/bt0"
-        android:text="接口串行"
-        app:layout_constraintTop_toTopOf="parent"
+    <data>
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </Button>
+        android:layout_height="match_parent"
+        tools:context=".view.MultiApiAct">
 
-    <Button
-        android:id="@+id/bt1"
-        android:text="接口并发"
-        app:layout_constraintTop_toBottomOf="@id/bt0"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </Button>
+        <Button
+            android:id="@+id/bt0"
+            android:text="接口串行"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></Button>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/bt1"
+            android:text="接口并发"
+            app:layout_constraintTop_toBottomOf="@id/bt0"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></Button>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
