--- a/app/src/main/res/layout/activity_cache.xml
+++ b/app/src/main/res/layout/activity_cache.xml
@@ -1,39 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.CacheActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <data>
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".view.CacheActivity">
 
-        <Button
-            android:id="@+id/bt0"
-            android:textAllCaps="false"
-            android:text="请求失败时使用缓存"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </Button>
+            android:orientation="vertical"
+            android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/bt1"
-            android:textAllCaps="false"
-            android:text="有缓存使用缓存 否则调用接口"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </Button>
+            <Button
+                android:id="@+id/bt0"
+                android:textAllCaps="false"
+                android:text="请求失败时使用缓存"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></Button>
 
-        <Button
-            android:id="@+id/bt2"
-            android:textAllCaps="false"
-            android:text="先使用缓存 再调用接口"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </Button>
-    </LinearLayout>
+            <Button
+                android:id="@+id/bt1"
+                android:textAllCaps="false"
+                android:text="有缓存使用缓存 否则调用接口"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></Button>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <Button
+                android:id="@+id/bt2"
+                android:textAllCaps="false"
+                android:text="先使用缓存 再调用接口"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></Button>
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
