--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,84 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
 
-    <LinearLayout
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        tools:context=".view.MainActivity">
 
-        <Button
-            android:id="@+id/bt0"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:textAllCaps="false"
-            android:text="一次性接口请求"
+            android:orientation="vertical"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_height="wrap_content">
-        </Button>
 
-        <Button
-            android:id="@+id/bt1"
-            android:layout_width="match_parent"
-            android:textAllCaps="false"
-            android:text="可重复接口请求"
-            android:layout_height="wrap_content">
-        </Button>
+            <Button
+                android:id="@+id/bt0"
+                android:layout_width="match_parent"
+                android:textAllCaps="false"
+                android:text="一次性接口请求"
+                android:layout_height="wrap_content"></Button>
 
-
-
-
-        <Button
-            android:id="@+id/bt2"
-            android:layout_width="match_parent"
-            android:textAllCaps="false"
-            android:text="接口的并发和串行"
-            android:layout_height="wrap_content">
-        </Button>
-
-        <Button
-            android:id="@+id/bt3"
-            android:layout_width="match_parent"
-            android:textAllCaps="false"
-            android:text="列表(带缓存)"
-            android:layout_height="wrap_content">
-        </Button>
-        <Button
-            android:id="@+id/bt4"
-            android:layout_width="match_parent"
-            android:textAllCaps="false"
-            android:text="独立页面外调用接口"
-            android:layout_height="wrap_content">
-        </Button>
-
-        <Button
-            android:id="@+id/bt5"
-            android:layout_width="match_parent"
-            android:textAllCaps="false"
-            android:text="搜索(单接口取消)"
-            android:layout_height="wrap_content">
-        </Button>
-
-        <Button
-            android:id="@+id/bt6"
-            android:layout_width="match_parent"
-            android:textAllCaps="false"
-            android:text="接口缓存"
-            android:layout_height="wrap_content">
-        </Button>
+            <Button
+                android:id="@+id/bt1"
+                android:layout_width="match_parent"
+                android:textAllCaps="false"
+                android:text="可重复接口请求"
+                android:layout_height="wrap_content"></Button>
 
 
-        <Button
-            android:id="@+id/btTest"
-            android:layout_width="match_parent"
-            android:textAllCaps="false"
-            android:text="test"
-            android:layout_height="wrap_content">
-        </Button>
-    </LinearLayout>
+            <Button
+                android:id="@+id/bt2"
+                android:layout_width="match_parent"
+                android:textAllCaps="false"
+                android:text="接口的并发和串行"
+                android:layout_height="wrap_content"></Button>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <Button
+                android:id="@+id/bt3"
+                android:layout_width="match_parent"
+                android:textAllCaps="false"
+                android:text="列表(带缓存)"
+                android:layout_height="wrap_content"></Button>
+
+            <Button
+                android:id="@+id/bt4"
+                android:layout_width="match_parent"
+                android:textAllCaps="false"
+                android:text="独立页面外调用接口"
+                android:layout_height="wrap_content"></Button>
+
+            <Button
+                android:id="@+id/bt5"
+                android:layout_width="match_parent"
+                android:textAllCaps="false"
+                android:text="搜索(单接口取消)"
+                android:layout_height="wrap_content"></Button>
+
+            <Button
+                android:id="@+id/bt6"
+                android:layout_width="match_parent"
+                android:textAllCaps="false"
+                android:text="接口缓存"
+                android:layout_height="wrap_content"></Button>
+
+
+            <Button
+                android:id="@+id/bt7"
+                android:layout_width="match_parent"
+                android:textAllCaps="false"
+                android:text="tabLayout+viewpager2+懒加载"
+                android:layout_height="wrap_content"></Button>
+
+
+            <Button
+                android:id="@+id/btTest"
+                android:layout_width="match_parent"
+                android:textAllCaps="false"
+                android:text="test"
+                android:layout_height="wrap_content"></Button>
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
